[project]
name = "ci-admin"
description = "Administration of runtime configuration (Taskcluster settings) for Firefox-CI"
version = "1.0.0"
authors = [
  { name = "Mozilla Release Engineering", email = "release+fxci-config@mozilla.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
  "aiohttp<4",
  "aiohttp-retry",
  "attrs",  # http://www.attrs.org/en/stable/backward-compatibility.html
  "blessings<2",
  "click",
  "iso8601==0.1.12",  # no semver..
  "json-e<3",
  "mozilla-repo-urls",
  "pyyaml>=5.3",
  "simple-github>=2.1.0",
  "sortedcontainers<3",
  "taskcluster",
  "tc-admin>=3.3.1",
  # These are used at run-time as part of `tc-admin check`
  "async-timeout",
  "pytest",
  "pytest-asyncio",
]

[project.scripts]
ci-admin = "ciadmin.boot:boot"
fxci = "fxci.cli:main"

[tool.uv]
dev-dependencies = [
  "black",
  "check-manifest",
  "coverage",
  "flake8",
  "isort",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "tox",
  "yamllint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ciadmin", "src/fxci"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",       # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "PLC", "PLE",   # pylint
    "UP",           # pyupgrade
]
ignore = [
    "E402",
    "E501",  # let ruff-format handle line-length
    "E741",
]

[tool.ruff.lint.isort]
known-first-party = ["ciadmin", "build_decision"]
known-third-party = ["taskcluster", "tcadmin"]


[tool.isort]
known_third_party = ["taskcluster", "tcadmin"]
known_first_party = ["ciadmin", "build_decision"]
